--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <div id="drag-container">
         <div id="spin-container">
           <img src="./img/img.jpg" alt="">
-          <img src="./img/img1.jpg" alt="">
-          <img src="./img/img2.jpg" alt="">
-          <img src="./img/img3.jpg" alt="">
-          <img src="./img/img4.jpg" alt="">
-          <img src="./img/img5.jpg" alt="">
-          <img src="./img/img6.jpg" alt="">
-          <img src="./img/img7.jpg" alt="">      
+          <img src="./img/img.jpg" alt="">
+          <img src="./img/img.jpg" alt="">
+          <img src="./img/img.jpg" alt="">
+          <img src="./img/img.jpg" alt="">
+          <img src="./img/img.jpg" alt="">
+          <img src="./img/img.jpg" alt="">
+          <img src="./img/img.jpg" alt="">      
             <p>My Love</p>
          
        
