--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div id="drag-container">
         <div id="spin-container">
-          <img src="./img348382752_644690523754227_1348033685763636124_n.jpg" alt="">
+          <img src="./img/348382752_644690523754227_1348033685763636124_n.jpg.jpg" alt="">
           <img src="./img/348382752_644690523754227_1348033685763636124_n.jpg" alt="">
           <img src="./img/348382752_644690523754227_1348033685763636124_n.jpg" alt="">
           <img src="./img/348382752_644690523754227_1348033685763636124_n.jpg" alt="">
